--- a/src/style/style.css
+++ b/src/style/style.css
@@ -21,6 +21,7 @@ h2 {
   justify-content: space-between;
   width: 1000px;
   margin: 0 auto;
+  visibility: hidden;
 }
 
 .desk-wrapper {
@@ -55,4 +56,100 @@ h2 {
 
 .free {
   background-color: #87bbf6;
+}
+
+.before-game {
+  display: flex;
+  justify-content: space-between;
+  width: 1000px;
+  margin: 20px auto;
+}
+
+.ship-4 {
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+}
+
+.ship-vertical {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.ship-horizontal {
+  margin: 10px;
+  display: flex;
+}
+
+.ship-container {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 350px;
+}
+
+h3 {
+  font-size: 26px;
+  margin-bottom: 30px;
+}
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  top: 8px;
+  width: 50px;
+  height: 30px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  display: none;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: '';
+  height: 22px;
+  width: 22px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(22px);
+  -ms-transform: translateX(2px);
+  transform: translateX(22px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
